--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -165,6 +165,16 @@
 		margin-top: 1em;
 	}
 
+	.sidebars_first{
+		.form-checkboxes {
+			display: block;
+		}
+	}
+
+	#edit-left-column .form-item-field-publication-type > label, #edit-left-column .form-item-language > label, #edit-left-column .form-item-field-priority-area > label, #edit-left-column .form-item-relevant-for > label, #edit-left-column .form-item-languages > label, #edit-left-column .form-item-publication-type > label{
+		background-color: transparent;
+	}
+
 	.field.field-name-field-summary{
 		margin-right: 2em;
 		margin-left: 2em;
@@ -248,12 +258,27 @@
 	}
 
 	/* General Search */
+
+	.page-search .main-container aside{
+		padding: 1em;
+	}
+
+	.page-search .main-container .region-content{
+		padding: 1em;
+	}
+
 	.page-search .region.region-content .view-search .view-header{
 		margin-bottom: 1em;
 	}
 
 	.page-search .region-sidebar-first .block.block-facetapi h2{
 		background-color: transparent;
+	}
+
+	.page-search .view-footer{
+		right: auto;
+		position: relative;
+		top: -6px;
 	}
 
 	/*Footer*/
