--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -99,6 +99,13 @@ body.splash-page #sliding-popup.sliding-popup-top {
   background: url(../images/ico-plus-20-hover.png) no-repeat 99% 2px #b9d643;
   text-decoration: none;
 }
+.main-container h2 {
+  color: #003399;
+}
+.main-container h2 a:before {
+  content: '';
+  padding-right: 0;
+}
 /* Next Campaign 2020-2022 */
 .container-fluid {
   padding-left: 0;
@@ -1531,7 +1538,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   border: 1px solid #003399;
   border-radius: 5px;
   margin-top: 26px;
-  width: 180px;
+  width: 93%;
   background: #FFF;
 }
 .filters-header {
@@ -1605,10 +1612,6 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .page-publications .publications-right-column .share-this {
   padding-top: 4em;
 }
-.page-publications .content-pagination {
-  position: relative;
-  clear: both;
-}
 .page-publications .pager-total {
   position: absolute;
   top: 2em;
@@ -1619,6 +1622,11 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   color: #003399;
   text-align: center;
   font-weight: bold;
+}
+.content-pagination {
+  position: relative;
+  clear: both;
+  width: 100%;
 }
 /* Publication detail */
 .publications-row {
@@ -1698,8 +1706,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   color: #003399;
   padding: 1em;
   background: #daea96;
-  height: 1%;
-  overflow: hidden;
+  float: left;
 }
 .content-languages-download .form-group {
   margin-bottom: 0px;
@@ -1731,8 +1738,17 @@ span.title-select {
 }
 .content-languages-download .new-select-style {
   width: 58%!important;
-  background: url(../images/header/select.png) no-repeat scroll 96% center transparent;
+  background: url(../images/header/select.png) no-repeat scroll 96% center transparent !important;
   color: #003399;
+  height: auto;
+  padding: 5px;
+}
+.chosen-container-multi .chosen-choices li.search-field input[type="text"] {
+  text-indent: -99999px;
+}
+.chosen-container-multi .chosen-choices {
+  overflow: initial;
+  background: transparent;
 }
 .content-languages-download a img {
   float: right;
@@ -1908,6 +1924,10 @@ div.publications-detail-right-column > a.download {
 .sidebars_first #edit-tags label {
   color: #55575d !important;
   font-size: 0.9em !important;
+}
+#edit-field-publication-type > div > label {
+  font-size: 1.8rem;
+  color: #003399 !important;
 }
 input[type=checkbox] {
   display: none;
@@ -2363,14 +2383,19 @@ span.pages {
 }
 .page-search .views-exposed-widgets select {
   height: 35px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-appearance: button;
+  background: url(../images/green-select.png) no-repeat 94% 55% #ffffff;
   border: 1px solid #003399;
   border-radius: 5px !important;
-  background: #ffffff;
   width: 100%!important;
   float: left;
   margin-top: 0;
   padding-left: 10px;
   color: #003399;
+  cursor: pointer;
 }
 .page-search .view-footer {
   display: block;
@@ -2378,17 +2403,28 @@ span.pages {
 .page-search .region-sidebar-first .block.block-facetapi .facetapi-facetapi-checkbox-links {
   padding-top: 0.5em;
 }
+.page-search .views-widget-sort-by > .form-item-sort-by > label:after {
+  content: '';
+}
 .page-search #views-exposed-form-search-site .views-submit-button button {
   background: #003399 !important;
   padding: 0 1em;
   margin-top: 23px;
   border-radius: 5px;
 }
+.page-search #views-exposed-form-search-site .views-submit-button button:hover {
+  opacity: 0.8;
+}
 .page-search .views-widget-sort-by > .form-item-sort-by > label {
   margin-top: 0;
 }
 .page-search .region-sidebar-first #block-osha-search-osha-search-clear-filters .clear-wrapper > a {
   border-bottom: 0;
+}
+.page-search .region-sidebar-first .block.block-facetapi h2 {
+  font-size: 1.8rem;
+  color: #003399 !important;
+  font-weight: normal !important;
 }
 @media (max-width: 1200px) {
   .start-browsing {
@@ -2422,6 +2458,17 @@ span.pages {
   }
   .breadcrumb_hwc20 {
     padding: 30px 10px 5px 70px;
+  }
+}
+@media (max-width: 1391px) {
+  body {
+    padding-top: 232px;
+  }
+  .page-search .view-footer {
+    display: block;
+    position: absolute;
+    top: -37px;
+    width: 100%;
   }
 }
 @media (max-width: 1044px) {
@@ -2571,6 +2618,17 @@ span.pages {
     width: 100% !important;
     margin-top: 1em;
   }
+  .sidebars_first .form-checkboxes {
+    display: block;
+  }
+  #edit-left-column .form-item-field-publication-type > label,
+  #edit-left-column .form-item-language > label,
+  #edit-left-column .form-item-field-priority-area > label,
+  #edit-left-column .form-item-relevant-for > label,
+  #edit-left-column .form-item-languages > label,
+  #edit-left-column .form-item-publication-type > label {
+    background-color: transparent;
+  }
   .field.field-name-field-summary {
     margin-right: 2em;
     margin-left: 2em;
@@ -2635,11 +2693,22 @@ span.pages {
     right: auto;
   }
   /* General Search */
+  .page-search .main-container aside {
+    padding: 1em;
+  }
+  .page-search .main-container .region-content {
+    padding: 1em;
+  }
   .page-search .region.region-content .view-search .view-header {
     margin-bottom: 1em;
   }
   .page-search .region-sidebar-first .block.block-facetapi h2 {
     background-color: transparent;
+  }
+  .page-search .view-footer {
+    right: auto;
+    position: relative;
+    top: -6px;
   }
   /*Footer*/
   .footer-section {
