--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -51,6 +51,21 @@
 
 }
 
+@media (max-width: 1391px) {
+
+	body {
+	    padding-top: 232px;
+	}
+
+	.page-search .view-footer {
+	    display: block;
+	    position: absolute;
+	    top: -37px;
+	    width: 100%;
+	}
+
+}
+
 @media (max-width: 1044px) {
 
 	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3){
