--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -118,6 +118,15 @@ body.splash-page #sliding-popup.sliding-popup-top{
 	}
 }
 
+.main-container h2{
+	color: #003399;
+}
+
+.main-container h2 a:before{
+	content: '';
+	padding-right: 0;
+}
+
 /* Next Campaign 2020-2022 */
 
 .container-fluid{
@@ -1701,7 +1710,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
     border: 1px solid #003399;
     border-radius: 5px;
     margin-top: 26px;
-    width: 180px;
+    width: 93%;
     background: #FFF;
 }
 
@@ -1790,11 +1799,6 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	 	}
 	}
 
-	.content-pagination{
-	    position: relative;
-	    clear: both;
-	}
-
 	.pager-total{
 	  position: absolute;
 	  top:2em;
@@ -1806,6 +1810,12 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	    font-weight: bold;
 	  }
 	}
+}
+
+.content-pagination{
+    position: relative;
+    clear: both;
+    width: 100%;
 }
 
 /* Publication detail */
@@ -1895,8 +1905,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
     color:#003399;
     padding: 1em;
     background:#daea96;
-    height: 1%;
-    overflow: hidden;
+    float: left;
     
     .form-group{
     	margin-bottom: 0px;
@@ -1939,8 +1948,20 @@ span.title-select{
 
 .content-languages-download .new-select-style{
     width: 58%!important;
-    background: url(../images/header/select.png) no-repeat scroll 96% center transparent;
+    background: url(../images/header/select.png) no-repeat scroll 96% center transparent !important;
     color: #003399;
+    height: auto;
+    padding: 5px;
+}
+
+.chosen-container-multi .chosen-choices li.search-field input[type="text"]{
+	text-indent: -99999px;
+}
+
+
+.chosen-container-multi .chosen-choices{
+	overflow: initial;
+	background: transparent;
 }
 
 .content-languages-download a img{
@@ -2136,7 +2157,7 @@ div.publications-detail-right-column > a.download{
 }
 
 .sidebars_first{
-  label {
+  label{
     color: #003399 !important;
     font-family: "Open Sans" !important;
     font-weight: normal !important;
@@ -2149,6 +2170,11 @@ div.publications-detail-right-column > a.download{
       font-size: 0.9em !important;
     }
   }
+}
+
+#edit-field-publication-type > div > label{
+	font-size: 1.8rem;
+  	color: #003399 !important;
 }
 
 input[type=checkbox] {
@@ -2661,14 +2687,19 @@ span.pages{
 		}
 		select{
 			height: 35px;
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			-webkit-appearance: button;
+			background: url(../images/green-select.png) no-repeat 94% 55% #ffffff;
 			border: 1px solid #003399;
 			border-radius: 5px !important;
-			background: #ffffff;
 			width: 100%!important;
 			float: left;
 			margin-top: 0;
 			padding-left: 10px;
 			color: #003399;
+			cursor: pointer;
 		}
 	}
 	.view-footer{
@@ -2680,11 +2711,18 @@ span.pages{
     padding-top: 0.5em;
 }
 
+.page-search .views-widget-sort-by > .form-item-sort-by > label:after{
+	content: '';
+}
+
 .page-search #views-exposed-form-search-site .views-submit-button button{
 	background: #003399 !important;
 	padding: 0 1em;
     margin-top: 23px;
     border-radius: 5px;
+    &:hover{
+    	opacity: 0.8;
+    }
 }
 
 .page-search .views-widget-sort-by > .form-item-sort-by > label{
@@ -2693,4 +2731,10 @@ span.pages{
 
 .page-search .region-sidebar-first #block-osha-search-osha-search-clear-filters .clear-wrapper > a{
 	border-bottom: 0;
+}
+
+.page-search .region-sidebar-first .block.block-facetapi h2{
+	font-size: 1.8rem;
+    color: #003399 !important;
+    font-weight: normal !important;
 }
