--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -6,6 +6,10 @@
 	    padding-top: 147px;
 	}
 
+	body.splash-page {
+	    padding-top: 143px;
+	}
+
 	.page_title h1 {
     	font-size: 2em;
     	width: 320px;
