--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -4,6 +4,10 @@
 	    padding-top: 190px;
 	}
 
+	body.splash-page{
+		padding-top: 190px;
+	}
+
 	header.navbar-default .campaigns-header .navbar-header .region-header #block-lang-dropdown-language, header.navbar-default .campaigns-header .navbar-header .region-header #block-menu-menu-header-login ~ #block-lang-dropdown-language{
 		background: transparent;
 		padding-bottom: 1em;
