--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -273,6 +273,9 @@
 
 	.page-search .region-sidebar-first .block.block-facetapi h2{
 		background-color: transparent;
+		padding-left: 0;
+    	margin-left: 0;
+    	padding-top: 15px;
 	}
 
 	.page-search .view-footer{
@@ -308,5 +311,28 @@
 		    float: left;
 		    width: 100%;
     	}
+	}
+}
+
+
+
+@media (max-width: 1200px) and (min-width: 990px) {
+	.page-tools-and-publications{
+		#edit-left-column{
+			width: 100%;
+	    	display: flex;
+	    	.content-filters{
+	    		width: 48%;
+	    		margin-right: 1em;
+	    	}
+		}
+	}
+
+	.page-publications .views-exposed-widget, .page-publications .page-events .views-exposed-widget {
+	    width: 32%!important;
+	}
+
+	.page-publications #content, .page-events #content {
+	    width: 96.1%!important;
 	}
 }
