--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1357,7 +1357,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .share-this .otw-twitter a {
   margin-left: 15px !important;
 }
-.share-this .hwc-share-widget {
+.hwc-share-widget {
   border-top: 0 ;
   border-bottom: 0;
 }
