--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -381,7 +381,7 @@ ul.time-and-counters{
 				padding-top: 0.5em;
 				a{
 					font-size: 1.2em;
-					font-style: italic;
+					font-style: normal;
 				}
 			}
 
@@ -1436,6 +1436,15 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .content{
 	margin-top: 3em;
+}
+
+.introductory-page{
+	.field-name-body{
+		text-align: center;
+	    font-size: 1.7rem;
+	    padding-bottom: 2em;
+	    color: #003399;
+	}
 }
 
 .region.region-sidebar-first.well{
