--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1530,6 +1530,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	background: none !important;;
 }
 
+.related-resources{
+	padding-bottom: 1em;
+}
+
 .related-resources-title{
 	color: #003399;
  	font-size: 1.6em;
@@ -1826,6 +1830,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
     position: relative;
     clear: both;
     width: 100%;
+    min-height: 50px;
 }
 
 /* Publication detail */
@@ -2544,6 +2549,7 @@ span.pages{
 .page-media-centre-news, .page-search{
 	.main-container{
 		background: #efefef;
+		padding-bottom: 2em;
 		#block-system-main{
 			.view{
 				clear: both;
@@ -2674,6 +2680,9 @@ span.pages{
 }
 
 .page-search{
+	.views-row img{
+		border: 0;
+	}
 	.region-sidebar-first{
 		.block.block-facetapi{
 			h2:after{
