--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -185,7 +185,7 @@
 		margin-right: 0;
 	}
 
-	.publications-right-column{
+	.page-publications .publications-right-column{
 		width: 100%;
 		float: right;
 		padding-right:0;
@@ -207,6 +207,7 @@
 
 	.box-latest-publications .right-column{
 		width: 100%;
+
 	}
 
 	.publication-see-more-bottom-container{
@@ -214,6 +215,11 @@
 		margin-bottom: 0;
 		bottom:auto;
 		position:static;
+	}
+
+	.page-publications .publications-right-column .news-see-more-button{
+		position: relative;
+		bottom: 0;
 	}
 
 	.publication-detail{
