--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -12,6 +12,7 @@
 	.page_title h1{
 		font-size: 2.6em;
 	    width: 480px;
+	    padding-bottom: 0;
 	}
 
 	#block-text-resize-0, #block-hwc-hwc-print-friendly{
