--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -291,16 +291,12 @@ ul.time-and-counters li .counter-label {
   border-radius: 15px;
   transition: 0.5s;
 }
-.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2) {
-  padding-top: 0;
-  border-top: 0;
-}
 .before-the-campaign .content-box-before .box-before-title {
   color: #00309d;
   font-size: 1.3em;
   font-weight: 600;
   border-top: 1px solid #CCC;
-  margin-top: 1.1em;
+  margin-top: 15px;
   padding: 5px 0;
 }
 .before-the-campaign .content-box-before .box-before-title.previous {
@@ -393,7 +389,7 @@ ul.time-and-counters li .counter-label {
 }
 .before-the-campaign .content-box-before .two-box-column .more-link a:hover {
   color: #FFF;
-  background: url(../images/ico-plus-20-hover.png) no-repeat 99% 2px #b9d643;
+  background: url(../images/ico-plus-20-hover.png) no-repeat 98.5% 2px #b9d643;
   text-decoration: none;
 }
 .before-the-campaign .content-box-before .box-before.news {
@@ -415,6 +411,10 @@ ul.time-and-counters li .counter-label {
   background: url(../images/events-h3-ico.png) no-repeat #ffffff;
   background-size: 38px;
   background-position: -2px -4px;
+}
+#block-views-view-campaign-materials-splash > div > div > div:nth-child(1) > div {
+  padding-top: 0;
+  border-top: 0;
 }
 /* Start browsing the content */
 .start-browsing {
@@ -1220,7 +1220,8 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   border-left: 1px solid white;
 }
 .footer-section ul {
-  padding-inline-start: 15px;
+  padding-left: 15px;
+  padding-top: 4px;
 }
 .footer-section ul a {
   display: block;
@@ -1233,7 +1234,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 /*Introductory Page > Article*/
 .breadcrumb {
   background: transparent;
-  padding: 15px 10px 5px 70px;
+  padding: 15px 10px 5px 100px;
   list-style: none;
 }
 .breadcrumb li {
@@ -1302,7 +1303,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   background: transparent;
   border: 0;
   box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.05);
-  padding-top: 21px;
+  padding-top: 5px;
 }
 #block-menu-block-4 {
   width: 100%;
@@ -1369,6 +1370,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .hwc-share-widget {
   border-top: 0 ;
   border-bottom: 0;
+  margin-top: 4px;
+}
+.hwc-share-widget ul {
+  padding-top: 0px;
 }
 .publication-detail {
   background: none !important;
@@ -1610,10 +1615,6 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .page-publications .publications-right-column h2 {
   margin-top: 0;
   line-height: 23px;
-}
-.page-publications .publications-right-column .news-see-more-button {
-  position: absolute;
-  bottom: 15px;
 }
 .page-publications .content-publication-info {
   display: flex;
@@ -2069,6 +2070,10 @@ span.pages {
   font-style: italic;
   font-size: 0.7em;
 }
+.publications-right-column .news-see-more-button {
+  position: absolute;
+  bottom: 15px;
+}
 .two_column h2 {
   color: #003399;
 }
@@ -2083,7 +2088,7 @@ span.pages {
 .publication-see-more-bottom-container {
   bottom: 0;
   position: absolute;
-  margin-bottom: 1em;
+  margin-bottom: 16px;
 }
 .content-fluid h2 {
   color: #003399;
@@ -2131,6 +2136,9 @@ span.pages {
   width: 100%;
   text-decoration: none;
   border-bottom: 0;
+}
+.container .content-box-sub a:hover {
+  opacity: 0.8;
 }
 .container .content-box-sub img {
   float: left;
@@ -2534,6 +2542,7 @@ span.pages {
   .page_title h1 {
     font-size: 2.6em;
     width: 480px;
+    padding-bottom: 0;
   }
   #block-text-resize-0,
   #block-hwc-hwc-print-friendly {
