--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -271,7 +271,6 @@ ul.time-and-counters{
 		font-weight: 400;
 	}
 
-
 	.content-box-before{
 		display: flex;
 	    justify-content: center;
@@ -335,17 +334,12 @@ ul.time-and-counters{
 		    }
 		}
 
-		div:nth-child(1) > div.box-before-title:nth-child(2){
-			padding-top: 0;
-			border-top: 0;
-		}
-
 		.box-before-title{
 			color:#00309d;
 			font-size: 1.3em;
 			font-weight: 600;
 			border-top:1px solid #CCC;
-			margin-top: 1.1em;
+			margin-top: 15px;
 	    	padding: 5px 0;
 		}
 
@@ -443,7 +437,7 @@ ul.time-and-counters{
 					margin-top: 1em;
 				    &:hover{
 				    	color: #FFF;
-				    	background: url(../images/ico-plus-20-hover.png) no-repeat 99% 2px #b9d643;
+				    	background: url(../images/ico-plus-20-hover.png) no-repeat 98.5% 2px #b9d643;
 				    	text-decoration: none;
 				    }
 				}
@@ -479,6 +473,11 @@ ul.time-and-counters{
 			}
 		}
 	}
+}
+
+#block-views-view-campaign-materials-splash > div > div > div:nth-child(1) > div{
+	padding-top: 0;
+	border-top: 0;
 }
 
 /* Start browsing the content */
@@ -1317,7 +1316,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		.views-field{
 		  border-top: none !important;
 		  border-right: 1px solid #CCC !important;
-    }	
+    	}	
 	}	
 
   .views-row-1  .views-field{
@@ -1358,7 +1357,8 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		border-left: 1px solid white;
 	}
 	ul{
-		padding-inline-start: 15px;
+		padding-left: 15px;
+		padding-top: 4px;
 		a{
 			display: block;
     	margin-left: -0.5em;
@@ -1376,7 +1376,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .breadcrumb{
 	background: transparent;
-	padding: 15px 10px 5px 70px;
+	padding: 15px 10px 5px 100px;
 	list-style: none;
 	li {
 		display: inline;
@@ -1455,7 +1455,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	background: transparent;
 	border: 0;
 	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.05);
-	padding-top: 21px;
+	padding-top: 5px;
 
 }
 
@@ -1513,10 +1513,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .share-this{
 	display: flex;
-  justify-content: flex-end;
-  margin-bottom: 1em;
-  .share-this-text{
-  	padding: 0;
+	justify-content: flex-end;
+	margin-bottom: 1em;
+  	.share-this-text{
+  		padding: 0;
   	span{
   		font-size: 11px;
   	}
@@ -1529,6 +1529,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .hwc-share-widget{
 	border-top: 0 ;
 	border-bottom: 0;
+	margin-top: 4px;
+	ul{
+		padding-top: 0px;
+	}
 }
 
 .publication-detail{
@@ -1801,11 +1805,6 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		h2{
 		    margin-top: 0;
 		    line-height:23px;
-		}
-
-		.news-see-more-button{
-			position: absolute;
-    		bottom: 15px;
 		}
 	}
 
@@ -2336,9 +2335,15 @@ span.pages{
 	font-weight: bold;
 }
 
-.publications-right-column h2 a{
-	font-style: italic;
-	font-size: 0.7em;
+.publications-right-column{
+	h2 a{
+		font-style: italic;
+		font-size: 0.7em;
+	}
+	.news-see-more-button{
+		position: absolute;
+		bottom: 15px;
+	}
 }
 
 .two_column h2{
@@ -2357,7 +2362,7 @@ span.pages{
 .publication-see-more-bottom-container{
 	bottom: 0;
     position: absolute;
-    margin-bottom: 1em;
+    margin-bottom: 16px;
 }
 
 .content-fluid{
@@ -2417,6 +2422,9 @@ span.pages{
 	    	width: 100%;
 	    	text-decoration: none;
 	    	border-bottom: 0;
+	    	&:hover{
+	    		opacity: 0.8;
+	    	}
 		}
 	    img{
 	    	float: left;
