--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -54,7 +54,7 @@
 @media (max-width: 1391px) {
 
 	body {
-	    padding-top: 232px;
+	    padding-top: 210px;
 	}
 
 	.page-search .view-footer {
@@ -72,10 +72,21 @@
 		width: 668px;
 	}
 
+	#block-views-splash-previous-campaigns-splash .view-content{
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+	}
+
 	#block-views-splash-previous-campaigns-splash > div > div > div{
-		width: 48%;
+		width: 49%;
 		float: left;
-		margin: 0 2% 0 0;
+		margin-right: 1%;
+	}
+
+	#block-views-splash-previous-campaigns-splash .box-before-title.previous{
+		display: flex;
+    	flex-wrap: wrap;
 	}
 
 	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
