--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,7 +1,7 @@
 @media (max-width: 992px) {
 
 	body {
-		padding-top: 217px;
+		padding-top: 207px;
 	}
 
 	.container{
@@ -342,4 +342,24 @@
 	.page-publications #content, .page-events #content {
 	    width: 96.1%!important;
 	}
+}
+
+@media (max-width: 1024px){
+
+	.footer{
+		padding-left: 0;
+		div.container{
+			padding-left: 0;
+			padding-right: 0;
+		}
+		div.on-the-web{
+			margin-right: 0;
+		}
+		div.on-the-web a{
+			margin-left: 3px;
+		}
+	}
+
+
+	
 }
