--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -3,7 +3,7 @@
 	/* Splash page */
 
 	body {
-	    padding-top: 145px;
+	    padding-top: 142px;
 	}
 
 	body.splash-page {
@@ -18,9 +18,12 @@
 	.container{
 		.content-box-sub{
 			width: 100%;
-    		margin-left: 3em;
-    		margin-right: 3em;
-    		margin-bottom: 2.5em;
+    		margin-left: 0;
+    		margin-right: 0;
+    		margin-bottom: 1em;
+    		h2{
+    			padding: 10px 0 0 0;
+    		}
     	}
 	}
 
@@ -62,6 +65,10 @@
 		.share-this{
 			width: 100%;
 		}
+	}
+
+	#block-menu-block-3{
+		padding: 0;
 	}
 
 }
