--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,7 +1,25 @@
 @media (max-width: 992px) {
 
 	body {
-		padding-top: 207px;
+		padding-top: 230px;
+	}
+
+	#navbar > div > div:nth-child(1) > div > div > div.col-xs-12.col-sm-9{
+		padding-top: 1em;
+    	padding-left: 1em!important;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header a img.pull-left{
+		margin-top: 31px;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header img:nth-child(3){
+		padding-top: 39px;
+    	margin-top: -2px;
+	}
+
+	#navbar > div > div:nth-child(1) > div > div > div.col-xs-12.col-sm-3.xs-menu{
+		padding-right: 10px;
 	}
 
 	.container{
@@ -51,6 +69,15 @@
 
 	.breadcrumb_hwc20{
 		display: none;
+	}
+
+	.view .views-row h2{
+		margin-left: 0;
+	}
+
+	.view .views-row .field.field-name-field-summary{
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	/*Splash page*/
