--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -10,6 +10,14 @@
   url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular") format("svg")
 }
 
+header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-login ~ #block-lang-dropdown-language select{
+	background: #d9e996 !important;
+	background-color: #d9e996;
+    border: 1px solid #003399;
+    border-radius: 5px;
+    padding-left: 0.5em;
+}
+
 body {
     padding-top: 210px;
 }
@@ -2438,7 +2446,7 @@ span.pages{
 	    h2 {
 		    font-family: 'Open Sans', sans-serif;
 		    color: #003399;
-		    font-size: 1.1em;
+		    font-size: 1.1em !important;
 		    margin: 0;
 		    clear: both;
 		    line-height: 20px;
