--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1,5 +1,49 @@
 @media (max-width: 768px){
 
+
+	.before-the-campaign .content-box-before .two-box-column{
+		flex-direction: row;
+		margin-bottom: 1em;
+		.box-before.news{
+			width: 42%;
+    		margin-right: 1%;
+		}
+		.box-before.events{
+			width: 56%;
+    		margin-right: 0;
+		}
+
+	}
+
+	.before-the-campaign .content-box-before .box-before{
+		width: 100%;
+		margin-right: 1em;
+	}
+
+	.comming-soon h2{
+		width: 100%;
+	}
+
+	ul.time-and-counters {
+	    width: 255px;
+	    margin: 0 auto;
+	    padding-top: 1em;
+		li .counter-label {
+			width: 100%;
+		    padding-top: 0;
+		    padding-bottom: 1em;
+		}
+	}
+
+	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3) {
+	    width: 742px;
+	}
+
+}
+
+
+@media (max-width: 767px){
+
 	body {
 	    padding-top: 190px;
 	}
@@ -12,8 +56,44 @@
 		background: transparent;
 		padding-bottom: 1em;
 		padding-right: 0px;
+		display: block !important;
+    	position: absolute;
+    	top: 1px;
+    	right: 56px;
 	}
 	
+	header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-login ~ #block-lang-dropdown-language:after{
+		background: url(../images/header/select-mobile.png) 5px 11px no-repeat #003399 !important;
+
+	}
+
+	header.navbar-default .campaigns-header .navbar-header .region-header #block-menu-menu-header-login{
+		float: right;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header .region-header #block-menu-menu-header-login ul li a{
+		background: #003399 url(../images/header/login.png) no-repeat 6px 3px;
+		min-width: 80px;
+		text-align: right;
+		padding-top: 0;
+	}
+
+	.xs-menu #block-search-form{
+		float: right;
+	}
+
+	#block-system-main div div.form-type-textfield, #block-system-main div div.form-type-password{
+		display: block;
+	}
+
+	header.navbar-default .navbar-collapse nav ul.menu.nav.navbar-nav li span{
+		display: none;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header .region-header #block-search-form.expanded .input-group input{
+		min-width: 190px;
+		height: 31px;
+	}
 
 	.intro-splash-20 {
 		.views-row-first{ 
@@ -97,10 +177,59 @@
 	header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-login ~ #block-lang-dropdown-language select{
 		color:#FFF;
 		width: auto !important;
+		background: #003399 !important;
 	}
 
 	header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-login ~ #block-lang-dropdown-language select option{
 		background: #003399;
+	}
+
+	.page-media-centre-news .main-container #block-system-main .view .views-row .more-link{
+		bottom: -15px;
+    	right: 0;
+	}
+
+	.page-search .main-container #block-system-main .view .views-row .more-link{
+		bottom: 10px;
+    	right: 0;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header .region-header #block-search-form .input-group input{
+		width: 0;
+		height: 31px;
+	}
+
+	#edit-search-block-form--2{   
+        position: absolute;
+        width: 0;
+       	min-width: 0;
+        background: #FFF;
+        top: -3px;
+        right: 27px;
+        border-bottom-left-radius: 10px;
+        border-top-left-radius: 10px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        color:#003399;
+        height: 30px;
+        font-size: 0.8rem;
+        opacity: 0;
+      
+    }
+
+    #edit-search-block-form--2.expand , #block-search-form.expand{
+        width: 220px;
+        min-width: 220px;
+        opacity: 1;
+        z-index: 99999999999;
+        -webkit-transition: width .3s ease-in-out;
+        -moz-transition: width .3s ease-in-out;
+        -o-transition: width .3s ease-in-out;
+        transition: width .3s ease-in-out;
+    }   
+
+    #search-block-form > div > div > div.input-group > span.input-group-btn > button{
+	    pointer-events: none;
 	}
 
 	/*Home*/
